fix error ortograf

--- a/templates/coevalDirector/index.html.twig
+++ b/templates/coevalDirector/index.html.twig
@@ -1,9 +1,9 @@
 {% extends '/base.html.twig' %}
 {% block body -%}
-    <h1>Evaluación a directores de durso del periodo seleccionado:</h1>
+    <h1>Evaluación a directores de curso del periodo seleccionado:</h1>
     <h3>
         Importante: Si un docente fue director de uno o más cursos y su valoración es la misma, solo es necesaria una
-        evaluación, de lo contrario, evalúe cada uno de los cursos independientes.
+        evaluación, de lo contrario, evalúe cada uno de los cursos por separado.
     </h3>
     <table class="table table-bordered table-striped hidden-mobile" style="width: 95%">
         <thead>
