fix periodoa on lider

--- a/templates/Curso/lider.html.twig
+++ b/templates/Curso/lider.html.twig
@@ -37,11 +37,11 @@
             <!-- NEW WIDGET START -->
             <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <!-- Widget ID (each widget will need unique ID)-->
-                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoa.id }}"
+                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe }}"
                      data-widget-editbutton="false" data-widget-deletebutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                            <h2>    Cursos ofertados en el periodo {{ periodoa.nombre }}</h2>
+                            <h2>    Cursos ofertados en el periodo {{ periodoe }}</h2>
                     </header>
 
                     <!-- widget div-->
@@ -62,7 +62,7 @@
                                     <th>Curso</th>
                                     <th>Programa</th>
                                     <th>Director</th>
-                                    <th>Editar</th>
+                                    <th>Cambiar Director</th>
                                 </tr>
                                 </thead>
                                 <tbody>
