fix periodo on cursos lider

--- a/templates/User/info.html.twig
+++ b/templates/User/info.html.twig
@@ -29,6 +29,10 @@
                 <th>UA</th>
                 <td>{{ app.session.get('escuelaid') }}</td>
             </tr>
+            <tr>
+                <th>PID</th>
+                <td>{{ app.session.get('periodoe') }}</td>
+            </tr>
         </tbody>
     </table>
 {% endblock %}
