--- a/templates/Curso/lider.html.twig
+++ b/templates/Curso/lider.html.twig
@@ -37,11 +37,11 @@
             <!-- NEW WIDGET START -->
             <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 <!-- Widget ID (each widget will need unique ID)-->
-                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe }}"
+                <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-{{ periodoe.id }}"
                      data-widget-editbutton="false" data-widget-deletebutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                            <h2>    Cursos ofertados en el periodo {{ periodoe }}</h2>
+                            <h2>    Cursos ofertados en el periodo {{ periodoe.id }}</h2>
                     </header>
 
                     <!-- widget div-->
