--- a/templates/Curso/lider.html.twig
+++ b/templates/Curso/lider.html.twig
@@ -41,7 +41,7 @@
                      data-widget-editbutton="false" data-widget-deletebutton="false">
                     <header>
                         <span class="widget-icon"> <i class="fa fa-table"></i> </span>
-                            <h2>    Cursos ofertados en el periodo {{ periodoe.id }}</h2>
+                            <h2>    Cursos ofertados en el periodo {{ periodoe.observaciones }}</h2>
                     </header>
 
                     <!-- widget div-->
