fix lista cursos escuela oferta

--- a/templates/Curso/index.html.twig
+++ b/templates/Curso/index.html.twig
@@ -46,7 +46,7 @@
                 <th>Id</th>
                 <th>Nombre</th>
                 <th>Escuela</th>
-                <th>Programa</th>
+                <th class="sorting_desc">Programa</th>
                 <th>Actions</th>
             </tr>
         </thead>
