--- a/templates/Escuela/info.html.twig
+++ b/templates/Escuela/info.html.twig
@@ -53,7 +53,7 @@
                 </td>
             </tr>
              <th>Cursos</th>
-                <td><a  href="{{ path('curso_escuela', { 'id': entity.id }) }}">Ver</a> </td>
+                <td><a href="{{ path('lider_cursos', { 'id': app.session.get('escuelaid')}) }}">Cursos Escuela</a></td>
             </tr>
         </tbody>
     </table>
