--- a/templates/Dofe/calificar.html.twig
+++ b/templates/Dofe/calificar.html.twig
@@ -20,12 +20,11 @@
             <tr>
                 <td>Calificación:</td>
                 <td>
-                    0 - 0.9	Incumplimiento total		No cumple con ningún aspecto de su responsabilidad principal.<br>
-                    1 - 1.9	Cumplimiento muy bajo	Cumple con una mínima proporción de su responsabilidad principal.<br>
-                    2 - 2.9	Cumplimiento bajo		Cumple con una proporción básica de su responsabilidad principal.<br>
-                    3 - 3.9	Cumplimiento medio		Cumple con más de la mitad de su responsabilidad principal.<br>
-                    4 - 4.9	Cumplimiento alto			Cumple con casi toda su responsabilidad principal.<br>
-                    5		Cumplimiento total		Cumple plenamente con su responsabilidad principal.
+                    1.0 - 1.9	BAJO<br>
+                    2.0 - 3.6	BÁSICO<br>
+                    3.7 - 3.9   ESTÁNDAR<br>
+                    4.0 - 4.3	AVANZADO<br>
+                    4.4 - 5.0	SUPERIOR
                 </td>
             </tr>
             <tr>
